PROYECTO2/k8s/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-go
  annotations:
    kubernetes.io/ingress.class: nginx # Tiene que ir, si no no funciona
    nginx.ingress.kubernetes.io/cors-allow-methods: "GET, POST"
  namespace: so1p2
spec:
  rules:
  - host: <Ip_Ingress_Controller>.nip.io # IP ingress controller (nginx), La IP Externa que nos da la de tipo load balancer
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: service-go
            port:
              number: 3000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-python
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/cors-allow-methods: "GET, POST"
    nginx.ingress.kubernetes.io/canary: "true" # para lod el trafico
    nginx.ingress.kubernetes.io/canary-weight: "50" # 50% de trafico
  namespace: so1p2
spec:
  rules:
  - host: <Ip_Ingress_Controller>.nip.io #IP ingress controller (nginx)
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: service-python
            port:
              number: 3000
